--- a/infrastructure/controllers/argocd/apps/1passwordconnect.yaml
+++ b/infrastructure/controllers/argocd/apps/1passwordconnect.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   project: infrastructure
   source:
-    repoURL: https://github.com/mitchross/talos-argocd-proxmox.git
+    repoURL: https://github.com/jr-b/homelab-k8s.git
     targetRevision: main
     path: infrastructure/controllers/1passwordconnect
   destination:
