--- a/infrastructure/networking/gateway/gw-internal.yaml
+++ b/infrastructure/networking/gateway/gw-internal.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   addresses:
   - type: IPAddress
-    value: 192.168.10.50
+    value: 192.168.86.50
   gatewayClassName: cilium
   listeners:
     - name: http
@@ -25,7 +25,7 @@ spec:
       tls:
         mode: Terminate
         certificateRefs:
-          - name: cert-vanillax
+          - name: cert-jrbnz
             kind: Secret
             group: "" # required
         # No QUIC/HTTP3 for internal gateway - only HTTP/2 and HTTP/1.1
