--- a/infrastructure/networking/gateway/kustomization.yaml
+++ b/infrastructure/networking/gateway/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ns.yaml
+- certificate.yaml
 - gw-external.yaml
 - gw-internal.yaml
 
