--- a/infrastructure/controllers/argocd/http-route.yaml
+++ b/infrastructure/controllers/argocd/http-route.yaml
@@ -3,6 +3,8 @@ kind: HTTPRoute
 metadata:
   name: argocd
   namespace: argocd
+  labels:
+    external-dns: "true"
 spec:
   parentRefs:
     - group: gateway.networking.k8s.io
