--- a/infrastructure/database/redis/redis-commander/httproute.yaml
+++ b/infrastructure/database/redis/redis-commander/httproute.yaml
@@ -3,6 +3,8 @@ kind: HTTPRoute
 metadata:
   name: redis-commander
   namespace: redis
+  labels:
+    external-dns: "true"
 spec:
   parentRefs:
     - group: gateway.networking.k8s.io
