--- a/infrastructure/storage/longhorn/httproute.yaml
+++ b/infrastructure/storage/longhorn/httproute.yaml
@@ -3,6 +3,8 @@ kind: HTTPRoute
 metadata:
   name: longhorn
   namespace: longhorn-system
+  labels:
+    external-dns: "true"
 spec:
   parentRefs:
     - group: gateway.networking.k8s.io
