--- a/my-apps/media/garage-webui/http-route.yaml
+++ b/my-apps/media/garage-webui/http-route.yaml
@@ -3,6 +3,8 @@ kind: HTTPRoute
 metadata:
   name: garage-webui
   namespace: garage
+  labels:
+    external-dns: "true"
 spec:
   parentRefs:
     - group: gateway.networking.k8s.io
